# decotextual

./: README.MD  pyproject.toml
.claude/: settings.local.json
examples/: demo.py
src/decotextual/: __init__.py  _linear.py  example.py  tui_app.py
src/textual_toolkit/: decorators.py  tui_app.py
src/textual_toolkit/utils/: __init__.py
src/textual_toolkit/widgets/: __init__.py
