[project]
name = "textual-toolkit"
version = "0.1.0"
description = "A lightweight Textual TUI decorator library"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/textual_toolkit"]
